load custom responsive font + a11y

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Cookie Consent</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
